Check point for : 0.5.14. Create parser for Scene input from file Created set up for scenes for optimisations. Started creating parser from JSON to scenes, Objects2D/3D done, Terrains left. Add reusable objects like textures, vertices ETC.
In Progress:
0.5.7. Create better and more complex demos
0.5.14. Create parser for Scene input from file